--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="0gQCcxuEmtAIeVxOdVLPGtCxfcHRDw0M" />
+            android:value="EnIkOC2Sj4TGYlTnSine8vCRIsitLXPv" />
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -60,6 +60,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
+        <activity android:name=".RegisterActivity" />
         <activity android:name=".Menu" /><!-- android:exported="true"-->
         <activity android:name=".Route" />
         <activity android:name=".Protection" />
